--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,25 +1,355 @@
 body {
-    background-color: #a2ded0;
+    background-color: #fff /*#a2ded0;*/
 }
 
+.logo {
+    position: relative;
+    left: 8rem;
+    width: 10%;
+}
+
+
+#navbarSupportedContent ul {
+    font-size: 14.8px;
+    position: absolute;
+    left: 68rem;
+}
+
+
+
+
 .jumbotron {
-    background-image: url('http://upload.wikimedia.org/wikipedia/commons/6/62/Drip_Coffee_Bangkok.jpg');
-    padding: 20%;
+    background-image: url("./cover.jpg");
     background-repeat: no-repeat;   
     background-size: cover;
     width: 100%;
-    margin-top: -40px;    
-    background-attachment: fixed;
-    background-position: center -238px;
+    /*margin-top: -40px; */   
+    /*background-attachment: fixed;*/
+    background-attachment: relative;
+    background-position: center 1px; /* I had to change the number for center -238px to 1px in order for the entire picture to appear*/
+    height: 86vh;
+    height: 46vw;
 }
 
-.jumbotron h1 {
-    position: absolute;
-    top: 18;
+.jumbotron h1  {
+   /* position: relative;*/
+    /*top: -18;*/
+    margin-top: 8rem;
     left: 0;
     padding-left: 20px;
     color: #f7fafe;
+   
 }
+
+#introduction h1  {
+    color: #fff;
+}
+
+.cover_message {
+    color: #fff;
+    margin-top: 24px;
+}
+
+.btn {
+    /*border-radius: .45rem;*/
+    margin-top: -44rem;
+    background-color: #0c63ff;
+    border-color: #0c63ff !important;
+    padding-left: 17px;
+    padding-right: 17px;
+    padding-top: 9px;
+    padding-bottom: 9px;
+    
+}
+
+.section_one_title {
+    position: relative;
+    left: 27rem;
+    top: 16;
+    padding-top: 31px;
+}
+
+h6 {
+    position: relative;
+    left: -13.4rem;
+    margin-top: 5rem;
+    font-style: italic;
+    color: #87909e;
+    margin-bottom: 6rem;
+}
+
+.sub_title {
+    position: relative;
+    left: 12rem;
+    padding-bottom: 6px;
+}
+
+.sub_title_two{
+    position: relative;
+    left: 12rem;
+    padding-bottom: 6px;
+}
+
+.sub_title_three{
+    position: relative;
+    left: 12rem;
+    padding-bottom: 6px;
+}
+
+.container_features .row {
+    padding-top: 43px;
+    padding-bottom: 12rem;
+   
+}
+
+.container_features p {
+    color: #87909e;
+    font-family: 'font-family: Poppins';
+    text-align: center;
+
+    /*font-style: normal;*/
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.3; 
+}
+button {
+    position: relative;
+    left: 12rem;
+
+    color: #fff;
+    background-color: #0c63ff;
+   /* border-color: #0c63ff;*/ /*!important*/
+    
+}
+
+
+
+
+
+.meeting_info, .section_container {
+    margin-bottom: 8rem;
+    position: relative;
+    left: 10rem;
+}
+
+
+
+.meeting_info {
+    display: flex;
+    justify-content: center;
+    margin-right: 27rem;
+}
+
+.meeting_info h3 {
+    font-size: 1.7rem;
+    padding-left: 15rem;
+}
+
+.meeting_info p {
+    font-size: 17px;
+    padding-left: 15rem;
+    text-align: justify;
+    word-break: break-all;
+    width: 120%;
+    color: #87909e;
+}
+
+.meeting_info, .section_container_two {
+    margin-bottom: 5rem;
+    position: relative;
+    left: 2rem;
+}
+
+
+.remote_info {
+    display: flex;
+    justify-content: center;
+    margin-right: 27rem;
+}
+
+.remote_info h3 {
+    font-size: 1.6rem;
+    padding-left: 15rem;
+    word-break: break-all;
+    width: 125%;
+    margin-top: -10rem;
+}
+
+.remote_info p {
+    font-size: 17px;
+    padding-left: 12rem;
+    text-align: justify;
+    word-break: break-all;
+    width: 114%;
+    margin-bottom: 2.4rem;
+    color: #87909e;
+    text-align: right;
+}
+
+
+
+.m-3 img {
+    margin-top: -14rem;
+    margin-left: 10rem;
+}
+
+.solution_section {
+    position: relative;
+    top: 15;
+    margin-top: -3rem;
+}
+
+.section_two_title {
+   position: relative;
+   left: 39rem;
+   top: 15;
+   padding-top: 31px;
+   margin-bottom: 12px;
+   margin-top: 10rem;
+}
+
+.small-header {
+   margin-left: 51rem;
+    margin-top: -0.1rem;
+    color: #87909e;
+    margin-bottom: 10rem;
+}
+
+
+
+.video_background {
+    background-image: url("/css/wallpaper.jpg");
+    margin: auto;
+    background-size: cover;
+}
+
+.video {
+    position: relative;
+    left: 25rem;
+    margin-top: -7rem;
+    margin-bottom: 28rem;
+}
+
+.profile_pic img {
+    position: absolute;
+   margin-left: 38.6rem;
+    border-radius: 75px;
+    margin-top: 11rem;
+    z-index: 1;
+    border: 3px solid #0c63ff;
+}
+
+
+
+.card {
+    padding-top: 74px;
+}
+
+.testimony_section {
+    display: flex;
+    position: absolute;
+    right: 14;
+    box-shadow: 5px 10px 18px #888888;
+    margin-left: 37rem; /*IM NOT SURE IF THIS IS RIGHT EVEN THOUGH IT SEEM TO BE THE ONLY EFFECT TO CENTER THE CARD*/
+
+}
+
+.featured {
+    display: flex;
+    justify-content: center;
+    margin-left: 0.9rem;
+    margin-top: 10rem;
+    margin-bottom: 10rem;
+}
+
+.john_epsey h4 {
+    position: absolute;
+    margin-top: 17px;
+}
+
+#quote {
+    color: #0000ff;
+    font-size: 12px;
+    letter-spacing: 2px;
+    padding-top: 4rem;
+}
+
+
+
+.button2 {
+    position: absolute;
+    border: 2px solid #fff;
+    width: 10%;
+    height: 4rem;
+    color: #fff;
+
+    top: -20;
+   
+      margin-left: 58rem;
+      margin-top: -6.6rem;
+    
+  }
+  
+  .button2:hover {
+    background-color: yellow;
+    color: white;
+  }
+  
+ 
+.more_info {
+    display: flex;
+
+    justify-content: center;
+    padding-top: 33rem;
+}
+
+.more_info p {
+    color: #87909e;
+}
+
+.info_container h2 {
+    margin-top: 2rem;
+    margin-bottom: 1.2rem;
+}
+
+.info_container {
+    margin-bottom: 6rem;
+}
+
+
+
+.divider {
+display: flex;
+background-color: #0c63ff !important;
+color: #fff;
+height: 10rem;
+}
+
+.divider_container {
+    justify-content: flex-start ;
+}
+.display-4 {
+    font-size: 23px;
+    margin-left: 13rem;
+    margin-top: 3.3rem;
+}
+
+.lead {
+    margin-left: 13rem;
+    margin-top: 1px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 .mission {
     background-color: #323232;
@@ -35,6 +365,9 @@ body {
 }
 
 .order-button {
+  
+    margin-top: -15rem;
+   /* margin-bottom: 34px;*/
     margin: auto;
     width: 25%;
     padding: 10px;
@@ -59,9 +392,7 @@ footer {
     height: auto;
 }
 
-.btn {
-    border-radius: .45rem;
-}
+
 
 footer ul li {   
     list-style: none;
