--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,8 +5,21 @@ body {
 .logo {
     position: relative;
     left: 8rem;
-    width: 10%;
+    width: 35%;
 }
+
+.footer_logo {
+    margin-left: 12px;
+    width: 220px
+}
+
+.list-unstyled ul li {
+    margin-left: 14px;
+}
+
+
+
+
 
 
 #navbarSupportedContent ul {
@@ -14,9 +27,6 @@ body {
     position: absolute;
     left: 68rem;
 }
-
-
-
 
 .jumbotron {
     background-image: url("./cover.jpg");
@@ -332,24 +342,13 @@ height: 10rem;
     font-size: 23px;
     margin-left: 13rem;
     margin-top: 3.3rem;
+    
 }
 
 .lead {
     margin-left: 13rem;
     margin-top: 1px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 .mission {
     background-color: #323232;
@@ -385,28 +384,96 @@ height: 10rem;
     padding-top: 10px;
 }
 
-footer {
-    background-color: #d64541;
+
+
+
+
+/*THE ABOUT US PAGE*/
+
+
+.block {
     position: absolute;
+    background-color: #0c63ff;
+    color: #fff;  
+    height: 67vh;
+    margin-top: 0.7px;
     width: 100%;
-    height: auto;
+}
+
+.block_container h1 {
+    position: relative;
+    margin-left: 33rem;
+    margin-top: 10rem;
+     font-weight: 700;
+}
+
+.block_container p {
+    margin-left: 4rem;
+    margin-right: 7rem;
+    text-align: center;
+}
+
+.description_section {
+    display: flex;
+    flex-flow: wrap;
+    justify-content: space-around;
+    margin-top: 22rem;
+    height: 84vh;
+   
+}
+
+.about_intro, .about_description {
+    margin-top: 17rem;
+    margin-bottom: 5rem;
+    margin-left: 13rem;
+}
+
+
+.about_intro {
+    font-size: 26px;
+    font-weight: 500;
+    margin-right: -17px;
+}
+
+.about-section {
+    margin-left: 34rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
+}
+
+a:link {
+    font-weight: 800;
 }
 
 
 
-footer ul li {   
-    list-style: none;
-    float: right;
+.footer-logo {
+    position: absolute;
+    margin-top: 15px;
 }
 
-footer p {
-    float: left;
+
+
+
+.text-center_two {
+    margin-top: 23px;
+    margin-right: 6px;
 }
 
-footer a, 
-footer p {
-    color: #fff;
-    vertical-align: middle;
+.footer-copyright  {
+    position: absolute;
+    margin-top: 34px;
+    margin-left: 34rem;
+}
+
+
+
+
+
+
+
+
 
 }
 /* Media queries */
