--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -174,6 +174,7 @@ button {
 .remote_info h3 {
     font-size: 1.6rem;
     margin-top: -10rem;
+    margin-right: 7rem;
     padding-left: 15rem;
     word-break: break-all;
     width: 125%;
